# eroder

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
release/: eroder  imgui.ini
release/shaders/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert  water.frag  water.tesc  water.tese
release/shaders/erosion/: copy.comp  evaporate.comp  flux.comp  soil.comp  transport.comp  velocity.comp  water.comp
src/: camera.cpp  camera.h  erode.cpp  erode.h  geometry.h  image.cpp  image.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  noise.cpp  noise.h  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h
